# barista

./: Cargo.toml  Makefile  README.md
.cargo/: config.toml
.github/workflows/: check.yml  test.yml
src/: bar.rs  conf.rs  fs.rs  lib.rs  main.rs  ps.rs  tracing.rs  x11.rs
src/bar/: feed.rs  mod.rs  server.rs  status.rs
src/control/: client.rs  mod.rs  server.rs
src/protocol/: client.rs  mod.rs  server.rs
