[package]
name = "barista"
version = "0.5.2"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.86", features = ["backtrace"] }
clap = { version = "4.5.6", features = ["derive"] }
expanduser = "1.2.2"
futures = "0.3.30"
futures-util = "0.3.30"
nix = { version = "0.29.0", features = ["signal", "process"] }
serde = { version = "1.0.203", features = ["derive"] }
tarpc = { version = "0.34.0", features = ["full"] }
thiserror = "1.0.61"
tokio = { version = "1.38.0", features = ["full", "tracing"] }
toml = "0.8.14"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "local-time"] }
x11 = { version = "2.21.0", features = ["xlib"] }
