[package]
name = "barista"
version = "0.15.3"
description = "Concurrent status bar with cache expirations and remote control; aggregating outputs from external collector processes."
repository = "https://github.com/xandkar/barista"
keywords = ["dwm", "status", "bar", "suckless"]
categories = ["command-line-utilities"]
license-file = "LICENSE"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.86", features = ["backtrace"] }
bytesize = "1.3.0"
clap = { version = "4.5.6", features = ["derive"] }
comfy-table = "7.1.1"
expanduser = "1.2.2"
futures = "0.3.30"
futures-util = "0.3.30"
humantime = "2.1.0"
nix = { version = "0.29.0", features = ["signal", "process"] }
serde = { version = "1.0.203", features = ["derive"] }
tarpc = { version = "0.34.0", features = ["full"] }
thiserror = "1.0.61"
tokio = { version = "1.38.0", features = ["full", "tracing"] }
tokio-util = "0.7.11"
toml = "0.8.14"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "local-time"] }
x11 = { version = "2.21.0", features = ["xlib"] }
